<resources>
    <string name="app_name">JohnHrApp</string>
    <string name="log_in">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email / User id</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="password">Password</string>
    <string name="social_login">Social Login</string>
    <string name="new_user">New user?<u><font fgcolor='#2964BD'> Sign Up</font></u></string>
    <string name="already_user"><font fgcolor='#828282'>Already account?</font><u><font fgcolor='#2964BD'> Sign</font></u></string>
    <string name="submit">Submit</string>
    <string name="email_id">Enter your email id</string>
    <string name="forgot_text1"><font fgcolor='#505050'>Forgot your password ?</font></string>
    <string name="forgot_description"><font fgcolor='#4e4e4e'>Don’t worry just type in your registered  email address and we will take it from there.</font></string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_description"><font fgcolor='#4e4e4e'>Please enter a new  password for your account.</font></string>
    <string name="reset_email_text">Enter new password</string>
    <string name="reset_confirm">Confirm new password</string>
    <string name="signup">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="user_email">Email id</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="account_number">Account Number</string>
    <string name="ibam_number">IBAM Number</string>
    <string name="sort_code">Sort Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_address">Bank Address</string>
    <string name="add_bank">Add Bank Info</string>
    <string name="complete">Complete</string>
    <string name="bank_detail"><font fgcolor='#505050'>Enter Bank Details</font></string>
    <string name="welcome">Welcome</string>
    <string name="congrats"><font fgcolor='#2559a9'>Congratulation !</font></string>
    <string name="welcome_description"><font fgcolor='#2559a9'>You have completed the Sign Up Process our team will be connecting with you inorder to verify the details you entered.</font></string>
    <string name="search_job">Search Job</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_new_password">Enter Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="help_title">Need Help, or want to  connect with us!</string>
    <string name="help_description">Tyoe in your message and  we will respond on your email:</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="job">Jobs</string>
    <string name="calendar">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_text">This Week (25/10 to 28/10)</string>
    <string name="shift_taken">Shifts Taken:</string>
    <string name="hours_work">Hours Worked:</string>
    <string name="earnings">Earnings:</string>
    <string name="last_earning">Last Week Earnings:</string>
    <string name="view"><u>View</u></string>
    <string name="upcoming_shift">Upcoming Shifts</string>
    <string name="sales_person">Salesperson</string>
    <string name="offer_job">Offered Jobs</string>
    <string name="jobs">JOBS</string>
    <string name="sorting">Sorting</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="notification">Notifications</string>
    <string name="clear_all"><u>Clear all</u></string>
    <string name="myprofile">My Profile</string>
    <string name="profie">Profile</string>
    <string name="edit"><u>Edit</u></string>
    <string name="experience">Experience</string>
    <string name="personal_info">Personal Info.</string>
    <string name="bank_info">Bank Info.</string>
    <string name="cancel_jobs">My Canceled Jobs</string>
    <string name="setting">Settings</string>
    <string name="cancel_job">Canceled jobs</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hidden_job">Hidden Jobs</string>
    <string name="faq">FAQS</string>
    <string name="edit_experience">Edit Experience</string>
    <string name="edit_exp"><u>Edit Experience</u></string>
    <string name="work_visa">Work Visa for Countries</string>
    <string name="more_experience">add more experience</string>
    <string name="profile">Profile</string>
    <string name="category_prompt">Choose your category</string>
    <string name="willing_work">Willing to Travel</string>
    <string name="unlimited_mile">Unlimited Miles</string>
    <string name="intereset_work">Intrested in Full Time Work</string>
    <string name="next">Next</string>
    <string name="add_experience">ADD EXPERIENCE</string>
    <string name="reference">Reference</string>
    <string name="current_employee">Is this you current employee ?</string>
    <string name="save">Save</string>
    <string name="visa_country">Work Visa for Countries</string>
    <string name="edit_bank_detail">Bank Details</string>
    <string name="edit_bank_info">Edit Bank Info</string>
    <string name="add_personal_info">Add Personal Info</string>
    <string name="skip">Skip</string>
    <string name="dob">Date of Birth</string>
    <string name="student">Student</string>
    <string name="school_university">School / University</string>
    <string name="upload_photo"><u>Upload Photo</u></string>
    <string name="upload_pps"><u>Upload PPS</u></string>
    <string name="upload_passport"><u>DL/ Passport</u></string>
    <string name="upload_resume"><u>CV/ Resume</u></string>
    <string name="upload_visa"><u>Visa</u></string>
    <string name="shift_hour">Shift Hours Completed</string>
    <string name="total_earning">Total Earning</string>
    <string name="monthly_shift">Month-shifts</string>
    <string name="shift_name">Shift Name</string>
    <string name="earned">Earned</string>
    <string name="shift_wage">Shift Wage</string>
    <string name="shift_premimum">Shift Premium</string>
    <string name="schedule_hour">Scheduled Hours</string>
    <string name="clock_time">Clock In Time</string>
    <string name="clock_out_time">Clock Out Time</string>
    <string name="my_status">My Stats</string>
    <string name="add_availablity">Add Availability</string>
    <string name="available_day">Available All Day</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="month">Month</string>
    <string name="details"><u>Details</u></string>
    <string name="shift_details"><u>Shift Details</u></string>
    <string name="job_name">Job Name</string>
    <string name="clock_out">CLOCK OUT</string>
    <string name="cancel_heading">Are you sure you want to  cancel today’s shift.</string>
    <string name="cancel_sub_heading">Canceled shift will impact  your bonus.</string>
    <string name="cancel_shift">Cancel Shift</string>
    <string name="click_pic">Click a Picture to Clock In</string>
    <string name="open_camera">Open Camera</string>
    <string name="clock_in">Clock In</string>
    <string name="add_holiday">Add Holiday</string>
    <string name="demo_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="view_cancel_shift">View canceled shift</string>
    <string name="delay">Delay</string>
    <string name="notification_shift">Notification for shift</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="pending">Pending</string>
    <string name="hide_job">Hide Job</string>
    <string name="save_job">Save Job</string>
    <string name="success_job">You have Successfully Applied  for this Job.</string>
    <string name="update_status_txt">You will get a notification once the job  Owner Updates the Status.</string>
    <string name="quick_search">Quick Search</string>
    <string name="minimum_shit">Minimum Shift Hours</string>
    <string name="type_job">Type of Job</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="both">Both</string>
    <string name="area">Area</string>
    <string name="change_photo"><u>Change Photo</u></string>
    <string name="visa"><u>Visa</u></string>
    <string name="cv_resume"><u>CV/ Resume</u></string>
    <string name="dl_passport"><u>DL/ Passport</u></string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="clock">Clock</string>
    <string name="heading">You have clocked in at “Budapest”</string>
    <string name="reason">Reason for cancelation</string>
</resources>
