<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_job"
        android:enabled="true"
        android:icon="@drawable/job"
        android:title="@string/job"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
</menu>