<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/category"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:paddingBottom="20dp" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/sub_category"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:paddingBottom="20dp"

                        />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/minimum_shit"
                        android:textColor="#505050"
                        android:paddingLeft="10dp"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/shift_hour"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:paddingBottom="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="5dp"
                        android:text="@string/type_job"
                        android:textColor="#505050"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/part_time"
                            android:textColor="#4e4e4e" />

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/full_time"
                            android:textColor="#4e4e4e" />

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/both"
                            android:textColor="#4e4e4e" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingLeft="10dp"
                        android:text="@string/area"
                        android:textColor="#505050"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/area"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:paddingBottom="20dp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/quick_search"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:gravity="center"
                        android:text="@string/quick_search"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_search"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="@string/search"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>